--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack --watch --progress --env.browser",
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
+    "typecheck:watch": "tsc -p . --watch",
     "postinstall": "node-config-ts",
     "run:firefox": "web-ext run -s dist"
   },
