--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-portal": "^4.0.2",
+    "@types/twit": "^2.2.24",
     "@types/webpack": "^4.41.13",
     "config": "^3.3.1",
     "cross-env": "^7.0.2",
