--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
+    "react-devtools": "^4.7.0",
     "react-dom": "^16.13.1",
     "react-portal": "^4.2.1",
     "style-loader": "^1.2.1",
