--- a/package.json
+++ b/package.json
@@ -32,17 +32,25 @@
     "@types/lodash": "^4.14.152",
     "@types/luxon": "^1.24.0",
     "@types/node": "^14.0.5",
-    "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-portal": "^4.0.2",
+    "@types/react": "^16.9.35",
     "@types/twit": "^2.2.24",
     "@types/webpack": "^4.41.13",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "config": "^3.3.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "dom-chef": "^4.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-unused-imports": "^0.1.3",
+    "eslint": "^7.1.0",
     "file-loader": "^6.0.0",
     "fp-ts": "^2.6.1",
     "generate-json-webpack-plugin": "^1.0.0",
@@ -54,33 +62,20 @@
     "node-config-ts": "^3.0.4",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "react": "^16.13.1",
+    "prettier": "^2.0.5",
     "react-devtools": "^4.7.0",
     "react-dom": "^16.13.1",
+    "react": "^16.13.1",
     "style-loader": "^1.2.1",
     "ts-key-enum": "^2.0.3",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3",
     "url-loader": "^4.1.0",
-    "use-resize-observer": "^6.1.0-alpha.3",
     "web-ext": "^4.2.0",
-    "webextension-polyfill": "^0.6.0",
     "webextension-polyfill-ts": "^0.16.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
-    "prettier": "^2.0.5"
+    "webextension-polyfill": "^0.6.0",
+    "webpack-cli": "^3.3.11",
+    "webpack": "^4.43.0"
   }
 }
