--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "@types/emoji-mart": "^3.0.2",
+    "@types/file-saver": "^2.0.1",
     "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.3.38",
     "@types/lodash": "^4.14.152",
@@ -53,6 +54,7 @@
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-unused-imports": "^0.1.3",
     "file-loader": "^6.0.0",
+    "file-saver": "^2.0.2",
     "fp-ts": "^2.6.1",
     "generate-json-webpack-plugin": "^1.0.0",
     "hogan.js": "^3.0.2",
