--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
     "typecheck:watch": "tsc -p . --watch",
+    "typecheck": "tsc -p .",
     "postinstall": "node-config-ts",
     "run:firefox": "web-ext run -s dist",
-    "test": "npm run lint && npm run tsc -p ."
+    "test": "npm run lint && npm run typecheck"
   },
   "browserslist": [
     "last 1 chrome versions",
