--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-devtools": "^4.7.0",
     "react-dom": "^16.13.1",
