--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "npm run lint && npm run typecheck",
     "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox",
     "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
-    "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts"
+    "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts --overwrite-dest"
   },
   "browserslist": [
     "last 1 chrome versions",
@@ -47,6 +47,7 @@
     "@types/webpack": "^4.41.13",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "config": "^3.3.1",
     "cross-env": "^7.0.2",
     "crx": "^5.0.1",
@@ -88,6 +89,7 @@
     "webextension-polyfill": "^0.6.0",
     "webextension-polyfill-ts": "^0.17.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "zip-webpack-plugin": "^3.0.0"
   }
 }
