--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack --watch --progress --env.browser",
+    "serve": "webpack-dev-server --hot --env.browser",
     "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --env.browser",
     "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env.browser",
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
@@ -34,6 +35,7 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "@types/emoji-mart": "^3.0.2",
+    "@types/feather-icons": "^4.7.0",
     "@types/file-saver": "^2.0.1",
     "@types/hogan.js": "^3.0.0",
     "@types/jquery": "^3.3.38",
@@ -62,6 +64,7 @@
     "eslint-plugin-react-hooks": "^4.0.2",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-unused-imports": "^0.1.3",
+    "feather-icons": "^4.28.0",
     "file-loader": "^6.0.0",
     "file-saver": "^2.0.2",
     "fp-ts": "^2.6.1",
@@ -91,6 +94,7 @@
     "webextension-polyfill-ts": "^0.17.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "zip-webpack-plugin": "^3.0.0"
   }
 }
