--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-frame-component": "^4.1.1",
     "@types/react-portal": "^4.0.2",
     "@types/twit": "^2.2.24",
     "@types/webpack": "^4.41.13",
@@ -85,6 +86,7 @@
     "react": "^16.13.1",
     "react-devtools": "^4.7.0",
     "react-dom": "^16.13.1",
+    "react-frame-component": "^4.1.3",
     "style-loader": "^1.2.1",
     "ts-key-enum": "^2.0.3",
     "ts-loader": "^7.0.4",
