--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "url": "https://github.com/eramdam/BetterTweetDeck/issues"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack --watch --progress --env.browser",
+    "_start": "cross-env NODE_ENV=development webpack --watch --progress --env",
+    "start:firefox": "npm run _start -- browser=firefox",
+    "start:chrome": "npm run _start -- browser=chromium",
     "serve": "webpack-dev-server --hot --env.browser",
-    "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --env.browser",
+    "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --env",
     "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env.browser",
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
@@ -51,11 +53,10 @@
     "@types/webpack": "^4.41.13",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
-    "clean-webpack-plugin": "^3.0.0",
     "config": "^3.3.1",
     "cross-env": "^7.0.2",
     "crx": "^5.0.1",
-    "css-loader": "^3.5.3",
+    "css-loader": "^5.0.0",
     "dom-chef": "^4.1.0",
     "emoji-mart": "^3.0.0",
     "emotion": "^10.0.27",
@@ -68,18 +69,18 @@
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-unused-imports": "^0.1.3",
     "feather-icons": "^4.28.0",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.1",
     "file-saver": "^2.0.2",
     "fp-ts": "^2.6.1",
-    "generate-json-webpack-plugin": "^1.0.0",
+    "generate-json-webpack-plugin": "^2.0.0",
     "hogan.js": "^3.0.2",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
     "io-ts": "^2.2.3",
     "lodash": "^4.17.15",
     "luxon": "^1.24.1",
     "moduleraid": "^4.0.1",
-    "node-config-ts": "^3.0.4",
-    "postcss-loader": "^3.0.0",
+    "node-config-ts": "^3.1.0",
+    "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
     "query-string": "^6.13.1",
@@ -87,17 +88,17 @@
     "react-devtools": "^4.7.0",
     "react-dom": "^16.13.1",
     "react-frame-component": "^4.1.3",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "ts-key-enum": "^2.0.3",
-    "ts-loader": "^7.0.4",
+    "ts-loader": "^8.0.6",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.3",
-    "url-loader": "^4.1.0",
+    "url-loader": "^4.1.1",
     "web-ext": "^4.2.0",
     "webextension-polyfill": "^0.6.0",
     "webextension-polyfill-ts": "^0.17.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
     "zip-webpack-plugin": "^3.0.0"
   }
