--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "scripts": {
     "_start": "cross-env NODE_ENV=development webpack --watch --progress --env",
     "start:firefox": "npm run _start -- browser=firefox",
-    "start:chrome": "npm run _start -- browser=chromium",
+    "start:chrome": "npm run _start -- browser=chrome",
     "serve": "webpack-dev-server --hot --env.browser",
     "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules --env",
-    "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env.browser",
+    "build:prod": "cross-env NODE_ENV=production webpack --hide-modules --env",
     "fix": "eslint --fix . --ext .jsx,.js,.ts,.tsx",
     "lint": "eslint . --ext .jsx,.js,.ts,.tsx",
     "typecheck:watch": "tsc -p . --watch",
@@ -25,7 +25,7 @@
     "postinstall": "node-config-ts",
     "run:firefox": "web-ext run -s dist",
     "test": "npm run lint && npm run typecheck",
-    "release": "npm run build:prod -- chrome && npm run pack:chrome && npm run build:prod -- firefox && npm run pack:firefox",
+    "release": "npm run build:prod -- browser=chrome && npm run pack:chrome && npm run build:prod -- browser=firefox && npm run pack:firefox",
     "pack:chrome": "cross-env NODE_ENV=development node tools/pack.js",
     "pack:firefox": "cross-env NODE_ENV=development web-ext build -s dist -a artifacts --overwrite-dest"
   },
@@ -41,62 +41,61 @@
     "@types/feather-icons": "^4.7.0",
     "@types/file-saver": "^2.0.1",
     "@types/hogan.js": "^3.0.0",
-    "@types/jquery": "^3.3.38",
-    "@types/lodash": "^4.14.152",
-    "@types/luxon": "^1.24.0",
-    "@types/node": "^14.0.5",
-    "@types/react": "^16.9.35",
+    "@types/jquery": "^3.5.3",
+    "@types/lodash": "^4.14.162",
+    "@types/luxon": "^1.25.0",
+    "@types/node": "^14.14.0",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-frame-component": "^4.1.1",
     "@types/react-portal": "^4.0.2",
-    "@types/twit": "^2.2.24",
-    "@types/webpack": "^4.41.13",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
-    "config": "^3.3.1",
+    "@types/twit": "^2.2.28",
+    "@types/webpack": "^4.41.23",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "config": "^3.3.2",
     "cross-env": "^7.0.2",
     "crx": "^5.0.1",
     "css-loader": "^5.0.0",
-    "dom-chef": "^4.1.0",
+    "dom-chef": "^4.2.2",
     "emoji-mart": "^3.0.0",
     "emotion": "^10.0.27",
-    "eslint": "^7.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "eslint-plugin-unused-imports": "^0.1.3",
     "feather-icons": "^4.28.0",
     "file-loader": "^6.1.1",
     "file-saver": "^2.0.2",
-    "fp-ts": "^2.6.1",
+    "fp-ts": "^2.8.4",
     "generate-json-webpack-plugin": "^2.0.0",
     "hogan.js": "^3.0.2",
     "html-webpack-plugin": "^4.5.0",
-    "io-ts": "^2.2.3",
-    "lodash": "^4.17.15",
-    "luxon": "^1.24.1",
+    "io-ts": "^2.2.11",
+    "lodash": "^4.17.20",
+    "luxon": "^1.25.0",
     "moduleraid": "^4.0.1",
     "node-config-ts": "^3.1.0",
     "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.0.5",
-    "query-string": "^6.13.1",
-    "react": "^16.13.1",
-    "react-devtools": "^4.7.0",
-    "react-dom": "^16.13.1",
+    "prettier": "^2.1.2",
+    "query-string": "^6.13.6",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-frame-component": "^4.1.3",
     "style-loader": "^2.0.0",
     "ts-key-enum": "^2.0.3",
     "ts-loader": "^8.0.6",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.9.3",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
     "url-loader": "^4.1.1",
-    "web-ext": "^4.2.0",
+    "web-ext": "^5.3.0",
     "webextension-polyfill": "^0.6.0",
-    "webextension-polyfill-ts": "^0.17.0",
+    "webextension-polyfill-ts": "^0.20.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
