--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "ts-key-enum": "^2.0.3",
     "ts-loader": "^8.0.6",
     "ts-node": "^9.0.0",
+    "ts-toolbelt": "^8.0.7",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.1",
     "web-ext": "^5.3.0",
