--- a/package.json
+++ b/package.json
@@ -73,12 +73,14 @@
     "reuse-promise": "^2.0.0",
     "rimraf": "^2.6.2",
     "semver": "^5.6.0",
+    "simple-plist": "^1.1.1",
     "stringify-package": "^1.0.0",
     "style-loader": "^0.20.3",
     "web-ext": "^4.2.0",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.10",
+    "xcode": "^3.0.1",
     "xml-js": "^1.6.2",
     "zip-webpack-plugin": "^3.0.0"
   },
