--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "update_emojis": "node tools/update_emojis.js",
     "prepush": "npm run lint",
     "fix": "eslint --fix '**/*.{js,jsx}' && prettier --write '**/*.css'",
-    "safari": "xcrun safari-web-extension-converter dist --project-location safari --copy-resources --swift --force --bundle-identifier me.erambert.bettertweetdeck"
+    "safari": "xcrun safari-web-extension-converter dist --project-location safari --swift --force --bundle-identifier me.erambert.bettertweetdeck"
   },
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
