--- a/package.json
+++ b/package.json
@@ -96,9 +96,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.2",
-    "execa": "^5.1.1",
+    "execa": "5.1.1",
     "file-saver": "^2.0.5",
-    "fp-ts": "^2.10.5",
+    "fp-ts": "^2.11.8",
     "framer-motion": "^5.0.0",
     "fuse.js": "^6.4.6",
     "generate-json-webpack-plugin": "^2.0.0",
@@ -108,7 +108,7 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "io-ts": "^2.2.16",
-    "io-ts-reporters": "^2.0.0",
+    "io-ts-reporters": "^2.0.1",
     "json-to-ts": "^1.7.0",
     "lint-staged": "^11.0.1",
     "lodash": "^4.17.21",
