--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "dependencies": {
     "@emotion/css": "^11.7.1",
     "@octokit/core": "^3.5.1",
-    "@popperjs/core": "^2.10.2",
+    "@popperjs/core": "^2.11.2",
     "@types/archiver": "^5.3.1",
     "@types/color-convert": "^2.0.0",
     "@types/config": "^0.0.41",
@@ -81,7 +81,7 @@
     "@typescript-eslint/parser": "^5.13.0",
     "archiver": "^5.3.0",
     "axios": "^0.26.0",
-    "chalk": "^4.1",
+    "chalk": "^4.*.*",
     "color-convert": "^2.0.1",
     "config": "^3.3.7",
     "copy-webpack-plugin": "^10.2.4",
