--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
     "@emotion/css": "^11.7.1",
+    "@floating-ui/dom": "^0.3.1",
+    "@floating-ui/react-dom": "^0.5.0",
     "@octokit/core": "^3.5.1",
-    "@popperjs/core": "^2.11.2",
     "@types/archiver": "^5.3.1",
     "@types/color-convert": "^2.0.0",
     "@types/config": "^0.0.41",
@@ -125,7 +126,6 @@
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-monaco-editor": "^0.47.0",
-    "react-popper": "^2.2.5",
     "react-virtual": "^2.10.4",
     "semver": "^7.3.5",
     "simple-plist": "^1.1.1",
