--- a/package.json
+++ b/package.json
@@ -54,54 +54,53 @@
   ],
   "homepage": "https://github.com/eramdam/BetterTweetDeck",
   "dependencies": {
-    "@emotion/css": "^11.1.3",
+    "@emotion/css": "^11.7.1",
+    "@floating-ui/dom": "^0.3.1",
+    "@floating-ui/react-dom": "^0.5.0",
     "@octokit/core": "^3.5.1",
-    "@popperjs/core": "^2.10.2",
-    "@types/archiver": "^5.1.1",
-    "@types/axios": "^0.14.0",
-    "@types/chalk": "^2.2.0",
+    "@types/archiver": "^5.3.1",
     "@types/color-convert": "^2.0.0",
-    "@types/config": "^0.0.39",
-    "@types/emoji-mart": "^3.0.5",
-    "@types/file-saver": "^2.0.3",
+    "@types/config": "^0.0.41",
+    "@types/emoji-mart": "^3.0.9",
+    "@types/file-saver": "^2.0.5",
     "@types/glob": "^7.2.0",
     "@types/he": "^1.1.2",
     "@types/hogan.js": "^3.0.1",
-    "@types/jquery": "^3.5.6",
-    "@types/lodash": "^4.14.171",
-    "@types/luxon": "^1.27.1",
-    "@types/node": "^16.3.3",
-    "@types/prettier": "^2.3.2",
-    "@types/react": "^17.0.14",
+    "@types/jquery": "^3.5.14",
+    "@types/lodash": "^4.14.179",
+    "@types/luxon": "^2.3.0",
+    "@types/node": "^17.0.21",
+    "@types/prettier": "^2.4.4",
+    "@types/react": "^17.0.39",
     "@types/react-color": "^3.0.5",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^17.0.13",
     "@types/semver": "^7.3.7",
     "@types/stylis": "^4.0.1",
     "@types/twemoji-parser": "^13.1.1",
     "@types/twit": "^2.2.30",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "archiver": "^5.3.0",
-    "axios": "^0.24.0",
-    "chalk": "^4.1.1",
+    "axios": "^0.26.0",
+    "chalk": "^4.*.*",
     "color-convert": "^2.0.1",
-    "config": "^3.3.6",
-    "copy-webpack-plugin": "^9.0.1",
+    "config": "^3.3.7",
+    "copy-webpack-plugin": "^10.2.4",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.0.0",
-    "discord.js": "^13.3.1",
+    "css-loader": "^6.6.0",
+    "discord.js": "^13.6.0",
     "emoji-mart": "^3.0.1",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unused-imports": "^1.1.2",
-    "execa": "^5.1.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "execa": "^5.*.*",
     "file-saver": "^2.0.5",
-    "fp-ts": "^2.10.5",
-    "framer-motion": "^5.0.0",
-    "fuse.js": "^6.4.6",
+    "fp-ts": "^2.11.8",
+    "framer-motion": "^6.2.8",
+    "fuse.js": "^6.5.3",
     "generate-json-webpack-plugin": "^2.0.0",
     "glob": "^7.1.7",
     "he": "^1.2.0",
@@ -109,47 +108,45 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "io-ts": "^2.2.16",
-    "io-ts-reporters": "^2.0.0",
+    "io-ts-reporters": "^2.0.1",
     "json-to-ts": "^1.7.0",
-    "lint-staged": "^11.0.1",
+    "lint-staged": "^12.3.4",
     "lodash": "^4.17.21",
-    "luxon": "^2.0.1",
+    "luxon": "^2.3.1",
     "moduleraid": "^5.1.0",
-    "monaco-editor-webpack-plugin": "^4.1.1",
-    "polished": "^4.1.3",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.4.1",
-    "prism-react-renderer": "^1.2.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "polished": "^4.1.4",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.2",
+    "prettier": "^2.5.1",
+    "prism-react-renderer": "^1.3.1",
     "pronouns": "^1.3.3",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
-    "react-monaco-editor": "^0.43.0",
-    "react-popper": "^2.2.5",
-    "react-virtual": "^2.10.0",
+    "react-monaco-editor": "^0.47.0",
+    "react-virtual": "^2.10.4",
     "semver": "^7.3.5",
     "simple-plist": "^1.1.1",
-    "string-replace-loader": "^3.0.3",
+    "string-replace-loader": "^3.1.0",
     "style-loader": "^3.1.0",
     "stylis": "^4.0.10",
-    "ts-key-enum": "^2.0.7",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.3.5",
+    "ts-key-enum": "^2.0.11",
+    "ts-loader": "^9.2.7",
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2",
     "use-debounce": "^7.0.0",
     "utility-types": "^3.10.0",
-    "web-ext": "^6.2.0",
+    "web-ext": "^6.7.0",
     "webextension-polyfill-ts": "^0.26.0",
-    "webpack": "^5.45.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
     "xcode": "^3.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7"
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3"
   }
 }
