--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "moduleraid": "^5.1.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "polished": "^4.1.4",
+    "postcss": "^8.4.8",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
     "prettier": "^2.5.1",
