--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/stylis": "^4.0.1",
     "@types/twemoji-parser": "^13.1.1",
     "@types/twit": "^2.2.30",
+    "@types/webextension-polyfill": "^0.9.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "archiver": "^5.3.0",
@@ -142,8 +143,8 @@
     "typescript": "^4.6.2",
     "use-debounce": "^7.0.0",
     "utility-types": "^3.10.0",
-    "web-ext": "^6.7.0",
-    "webextension-polyfill-ts": "^0.26.0",
+    "web-ext": "^7.2.0",
+    "webextension-polyfill": "^0.10.0",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "xcode": "^3.0.1"
