--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/stylis": "^4.0.1",
     "@types/twemoji-parser": "^13.1.1",
     "@types/twit": "^2.2.30",
+    "@types/webextension-polyfill": "^0.9.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "archiver": "^5.3.0",
@@ -108,7 +109,7 @@
     "hogan.js": "^3.0.2",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
-    "io-ts": "^2.2.16",
+    "io-ts": "^2.2.17",
     "io-ts-reporters": "^2.0.1",
     "json-to-ts": "^1.7.0",
     "lint-staged": "^12.3.4",
@@ -142,10 +143,10 @@
     "typescript": "^4.6.2",
     "use-debounce": "^7.0.0",
     "utility-types": "^3.10.0",
-    "web-ext": "^6.7.0",
-    "webextension-polyfill-ts": "^0.26.0",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
+    "web-ext": "^7.2.0",
+    "webextension-polyfill": "^0.10.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "xcode": "^3.0.1"
   },
   "devDependencies": {
